2006-05-10 François Proulx <francois.proulx@gmail.com>
	* Added sweetTitles tooltips script, now if you need to add tooltips simply add the 'title' attribute to you html <a>, <attr>, <accroym> tags
	* Fixed usort bug in MainUI
	* Fixed download (wget) in install.php

2006-05-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Working (if slightly basic) theme manager.  You can pick the theme in the network configuration.
	To add your own theme, read wifidog/media/network_theme_packs/README.txt
	* Cleanup and document the wifidog directory structure
	* Minor HTML corrections for content types
	* Completely rip out the old local_content system, and a bunch of obsolete defines and config variables.
	* Get rid of PHP generated stylesheets

2006-05-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Finish content assignation system
	* Content ordering is now global (network, nodes and everywhere content cand now be in mixed order).
  	* Implement 'everywhere' content
  	* Change MainUI::apendContent to MainUI::addContent

2006-04-28 François Proulx <francois.proulx@gmail.com>
	* Fixed error in initial data script

2006-04-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* wifidog/login/index.php: Correctly use DEFAULT_NODE_ID from config.php instead of hardcoded 'default'

2006-04-28 François Proulx <francois.proulx@gmail.com>
	* Fixed initial_data schema script so that it adds a dummy server.

2006-04-25 François Proulx <francois.proulx@gmail.com>
	* Updated JavaScript code to work with Google Maps v2 API
	* v2 will now provide full maps of European countries and is a bit faster
	* Updated the schema accordingly with new GMaps values

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* Dependencies.php:  Small fix in case gettext isn't installed

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorLDAP.php:  Merge patch from jguevara@unitec.edu.  Fixes #125

2006-04-24 Benoit Grégoire  <bock@step.polymtl.ca>